	PR tree-optimization/39455 	* tree-ssa-loop-niter.c (number_of_iterations_lt_to_ne): Fix types 	mismatches for POINTER_TYPE_P (type). 	(number_of_iterations_le): Likewise.

* gcc.dg/pr39455.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144885 138bc75d-0d04-0410-961f-82ee72b054a4